--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "react": "^17.0.1",
-    "react-bootstrap": "1.0.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
